# llvm-android

./: README.md
.github/workflows/: build-llvm.yml  build.yml
jni/: CMakeLists.txt  native-lib.cpp
